# nba-sales

./: pyproject.toml
data/artifacts/: baseline_win_model.pkl  nba_recommendations.parquet  uplift_control_0.pkl  uplift_model_summary.csv  uplift_summary_by_action.csv  uplift_treated_CALL_OUTREACH.pkl  uplift_treated_DEMO_OFFER.pkl  uplift_treated_EMAIL_SEQUENCE.pkl  uplift_treated_EXEC_SPONSOR_OUTREACH.pkl  uplift_treated_LINKEDIN_TOUCH.pkl  uplift_treated_PRICING_CONCESSION.pkl  uplift_treated_TECHNICAL_WORKSHOP.pkl
docs/: data_dictionary.txt
nba/: config.py
nba/features/: build_training_set.py
nba/modeling/: train_uplift.py
nba/pipelines/: generate_synthetic.py
nba/warehouse/: duckdb_client.py
nba_sales.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 01_eda_nba_sales.ipynb  02_model_baseline_win_prob.ipynb  03_model_uplift_per_action.ipynb
scripts/: build_training_set.py  generate_synth.py
tests/: test_synthetic_pipeline.py
