[project]
name = "nba-sales"
version = "0.1.0"
requires-python = ">=3.9,<3.11"
dependencies = [
  "duckdb>=0.9,<1.1",
  "pandas>=1.5,<2.2",
  "numpy>=1.21,<2.0",
  "scikit-learn>=1.0,<1.4",
  "fastapi>=0.95,<0.111",
  "uvicorn>=0.18,<0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9.0",
  "ruff>=0.3,<0.7",
  "mypy>=1.0,<1.9",
  "pre-commit>=2.20,<4.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nba"]
